--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       </p>
       <p>Your reservation code: <strong style="color:#ff006e;">${rec.reservation}</strong> has been sent to <strong>${phone}</strong>.</p>
       <p>Kindly take a screenshot and present this at the reception to get your ticket.</p>
-      <a href="https://wa.me/${rec.adminNumber}?text=Thank%20you%20Admin%2C%20I%20got%20my%20reservation%20and%20I%20will%20be%20there" class="whatsapp-btn" target="_blank">💬 Chat Admin</a>
+      <a href="https://wa.me/${rec.adminNumber}?text=Thank%20you%20Admin%2C%20I%20got%20my%20reservation%20and%20I%20will%20be%20there" class="whatsapp-btn" target="_blank">💬 Confirm Invitation</a>
       <button class="back-btn" onclick="closePopup()">Back</button>
     `;
 
