--- a/index.html
+++ b/index.html
@@ -241,19 +241,24 @@
   if (data && data[phone]) {
     const rec = data[phone];
 
-    popupContent.innerHTML = `
-      <h3>🎉 Congratulations ${rec.name}!</h3>
-      <p>You’ve been selected to attend <strong>The SheDiamond August Edition Event</strong>.</p>
-      <p style="font-style: italic; font-weight: bold; color: #ff66cc;">
-        Holding this Saturday, 2nd Aug, 2025 @ Ground Floor Hall, St. Leo Catholic Church, Ikeja, Lagos at 10:00 AM
-      </p>
-      <p>Your reservation code: <strong style="color:#ff006e;">${rec.reservation}</strong> has been sent to <strong>${phone}</strong>.</p>
-      <p>Kindly take a screenshot and present this at the reception to get your ticket.</p>
-      <a href="https://wa.me/${rec.adminNumber}?text=Thank%20you%20Admin%2C%20I%20got%20my%20reservation%20and%20I%20will%20be%20there" class="whatsapp-btn" target="_blank">💬 Confirm Invitation</a>
-      <button class="back-btn" onclick="closePopup()">Back</button>
-    `;
+      popupContent.innerHTML = `
+    <h3>🎉 Congratulations ${rec.name}!</h3>
+    <p>You’ve been selected to attend <strong>The SheDiamond August Edition Event</strong>.</p>
+    <p style="font-style: italic; font-weight: bold; color: #ff66cc;">
+      Holding this Saturday, 2nd Aug, 2025 @ Ground Floor Hall, St. Leo Catholic Church, Ikeja, Lagos at 10:00 AM
+    </p>
+    <p>Your reservation code: <strong style="color:#ff006e;">${rec.reservation}</strong> has been sent to <strong>${phone}</strong>.</p>
+    <p>Kindly take a screenshot and present this at the reception to get your ticket.</p>
+    <a id="whatsappLink" class="whatsapp-btn" target="_blank">💬 Confirm Invitation</a>
+    <button class="back-btn" onclick="closePopup()">Back</button>
+  `;
+  // Dynamically set the WhatsApp link using admin number from JSON
+  const waMessage = "Thank you Admin, I got my reservation and I will be there";
+  const waLink = `https://wa.me/${rec.adminNumber}?text=${encodeURIComponent(waMessage)}`;
+  document.getElementById("whatsappLink").href = waLink;
 
-    popup.style.display = "flex";
+  // Show the popup
+  popup.style.display = "flex";
 
   } else {
     popupContent.innerHTML = `
