--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
       <h2>Our Mission</h2>
       <p>To raise 5,000 women to be financially free in Nigeria.</p>
       <img src="mission1.jpg" alt="Mission Image" id="missionImg" />
+     <img src="mission2.jpg" alt="Mission Image" id="missionImg" />
+     <img src="mission3.jpg" alt="Mission Image" id="missionImg" />
       <button class="prev" onclick="prevMission()">&#8592;</button>
       <button class="next" onclick="nextMission()">&#8594;</button>
     </section>
