--- a/admin.html
+++ b/admin.html
@@ -91,7 +91,7 @@
 <!-- Token Page -->
 <div class="token-container hidden" id="tokenPage">
   <img src="logo.png" alt="SheDiamond Logo">
-  <h2>Enter GitHub Token</h2>
+  <h2>Enter Verification Token</h2>
   <input type="text" id="githubToken" placeholder="GitHub Token" autocomplete="off">
   <button onclick="verifyToken()">Continue</button>
   <button class="back-btn" onclick="goBack()">Back</button>
