--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   }
 
   // Mission images swipe
-  const missionImages=["mission1.jpg","mission2.jpg","mission3.jpg"];
+  const missionImages=["mission1.jpg","mission2.jpg","mission3.jpg","mission4.jpg","mission5.jpg","mission6.jpg"];
   let missionIndex=0;
   const missionImgEl=document.getElementById("missionImg");
   function prevMission(){ missionIndex=(missionIndex-1+missionImages.length)%missionImages.length; missionImgEl.src=missionImages[missionIndex]; }
