--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
       <h3>🎉 Congratulations ${rec.name}!</h3>
       <p>You’ve been selected to attend <strong>The SheDiamond August Edition Event</strong>.</p>
       <p style="font-style: italic; font-weight: bold; color: #ff66cc;">
-        Holding this Saturday,  23rd Aug, 2025 @ 2nd Floor, No. 91 Obafemi Awolowo Road, Opposite Paffi Furniture, Balogun Bus Stop, Ikeja, Lagos at 9:30 AM
+        Holding this Saturday,  23rd Aug, 2025 @ 2nd Floor, No. 91 Obafemi Awolowo Road, Opposite Baffi Furniture, Balogun Bus Stop, Ikeja, Lagos by 9:30AM
       </p>
       <p>Your reservation code: <strong style="color:#ff006e;">${rec.reservation}</strong> has been sent to <strong>${phone}</strong>.</p>
       <p>Kindly take a screenshot and present this at the reception to get your ticket.</p>
