--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
       <h3>🎉 Congratulations ${rec.name}!</h3>
       <p>You’ve been selected to attend <strong>The SheDiamond September Edition</strong>.</p>
       <p style="font-style: italic; font-weight: bold; color: #ff66cc;">
-        Holding this Saturday, 13th September, 2025 @ Ground Floor, St. Leo Catholic Church, Toyin Street, Ikeja, Lagos by 9:30AM
+        Holding this Saturday, 13th September, 2025 @ First Floor Hall, St. Leo Catholic Church, Toyin Street, Ikeja, Lagos by 9:30AM
       </p>
       <p>Your reservation code: <strong style="color:#ff006e;">${rec.reservation}</strong> has been sent to <strong>${phone}</strong>.</p>
-      <p>Kindly take a screenshot and present this at the reception to get your ticket.</p>
+      <p>Kindly take a screenshot of this and present this at the reception to get your ticket.</p>
       <a href="${rec.adminNumber}?text=Thank%20you%20Admin%2C%20I%20got%20my%20reservation%20and%20I%20will%20be%20there" class="whatsapp-btn" target="_blank">💬 Confirm Invitation</a>
       <button class="back-btn" onclick="closePopup()">Back</button>
     `;
