--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <!-- MISSION SECTION -->
     <section class="mission" id="mission">
       <h2>Our Mission</h2>
-      <p>To raise 5,000 women to be financially free in Nigeria.</p>
+      <p>To raise 5,000 financially free women who will build, lead and use their resources to affect the world positively.</p>
       <img src="mission1.jpg" alt="Mission Image" id="missionImg" />
       <button class="prev" onclick="prevMission()">&#8592;</button>
       <button class="next" onclick="nextMission()">&#8594;</button>
@@ -243,9 +243,9 @@
 
     popupContent.innerHTML = `
       <h3>🎉 Congratulations ${rec.name}!</h3>
-      <p>You’ve been selected to attend <strong>The SheDiamond September Edition</strong>.</p>
+      <p>You’ve been selected to attend <strong>The SheDiamond November Edition</strong>.</p>
       <p style="font-style: italic; font-weight: bold; color: #ff66cc;">
-        Holding this Saturday, 13th September, 2025 @ First Floor Hall, St. Leo Catholic Church, Toyin Street, Ikeja, Lagos by 9:30AM.
+        Holding on Saturday, 1st November, 2025 @ 2nd Floor, 91 Obafemi Awolowo Road, Opp. Baffi Furniture, Ikeja, Lagos by 8:30AM.
       </p>
       <p>Your reservation code: <strong style="color:#ff006e;">${rec.reservation}</strong> has been sent to <strong>${phone}</strong>.</p>
       <p>Kindly take a screenshot of this and present this at the reception to get your ticket.</p>
