--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   /* HERO SECTION */
   section { min-height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center; position:relative; padding:3rem 1.5rem; }
-  .hero { background:url('background.jpg') center center no-repeat; background-size:cover; position:relative; overflow:hidden; }
+  .hero { background:url('background.JPG') center center no-repeat; background-size:cover; position:relative; overflow:hidden; }
   .hero::before { content:''; position:absolute; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.3); }
 
   /* Thicker hero box */
