--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
   // Countdown
   const countdownEl=document.getElementById('countdown');
-  const eventDate=new Date("December 6, 2025 1:00:00").getTime();
+  const eventDate=new Date("December 13, 2025 9:00:00").getTime();
   const units=['Days','Hours','Minutes','Seconds'];
   const spans={};
 
@@ -246,9 +246,9 @@
 
     popupContent.innerHTML = `
       <h3>🎉 Congratulations ${rec.name}!</h3>
-      <p>You’ve been selected to attend <strong>The SheDiamond Grand Finale</strong>.</p>
+      <p>You’ve been selected to attend <strong>The SheDiamond Exclusive Event</strong>.</p>
       <p style="font-style: italic; font-weight: bold; color: #ff66cc;">
-        This Saturday, 6th December, 2025 @ Ground Floor Hall, St. Leo's Catholic Church, Toyin Street, Ikeja. TIME: 1:00PM.
+        This Saturday, 13th December, 2025 @ SHEDIAMOND HEAD OFFICE, 2nd floor, 91 Obafemi Awolowo Road, Opposite Baffi Furniture, Balogun Bus Stop, Ikeja, Lagos. TIME: 9:00AM.
       </p>
       <p>Your TICKET ID: <strong style="color:#ff006e;">${rec.reservation}</strong> has been sent to <strong>${phone}</strong>.</p>
       <p>Kindly take a screenshot of this and present this at the reception to get your ticket.</p>
