--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         This Saturday, 13th December, 2025 @ SHEDIAMOND HEAD OFFICE, 2nd floor, 91 Obafemi Awolowo Road, Opposite Baffi Furniture, Balogun Bus Stop, Ikeja, Lagos. TIME: 9:00AM.
       </p>
       <p>Your TICKET ID: <strong style="color:#ff006e;">${rec.reservation}</strong> has been sent to <strong>${phone}</strong>.</p>
-      <p>Kindly take a screenshot of this and present this at the reception to get your ticket.</p>
+      <p>Kindly take a screenshot of this invitation.</p>
       <a href="${rec.adminNumber}?text=Thanks%20you%20Admin%2C%20I%20confirmed%20my%20reservation%20and%20I%20will%20be%20there" class="whatsapp-btn" target="_blank">💬 Confirm Invitation</a>
       <button class="back-btn" onclick="closePopup()">Back</button>
     `;
